# polkit-gnome

./: Makefile  README.md  polkit-gnome-0.96-force-focus.patch  polkit-gnome.spec
src/: Makefile.in  NEWS  aclocal.m4  config.h.in  configure  configure.ac
src/docs/: Makefile.in
src/po/: LINGUAS  POTFILES.in  ca.po  cs.po  de.po  es.po  eu.po  gl.po  gu.po  it.po  ja.po  lt.po  nb.po  pa.po  pl.po  pt.po  pt_BR.po  sl.po  sv.po  zh_CN.po
src/polkitgtk/: Makefile.am  Makefile.in  example.c  polkitlockbutton.c
src/src/: Makefile.am  Makefile.in  main.c  polkit-gnome-authentication-agent-1.desktop.in.in  polkitgnomeauthenticationdialog.c  polkitgnomeauthenticator.c  polkitgnomelistener.c
